# FanEngagement

./: .dockerignore  .gitignore  .markdownlint.json  ADMIN_PANEL_FIX_SUMMARY.md  AGENTS.md  AUDIT_TEST_COVERAGE_REPORT.md  BADGE_COMPONENT_SUMMARY.md  BADGE_VISUAL_GUIDE.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NAVIGATION_REFACTOR_SUMMARY.md  NAVIGATION_VISUAL_CHANGES.md  PLATFORM_ADMIN_QUICK_ACCESS_VISUAL_GUIDE.md  PR_FIX_SUMMARY.md  PR_SUMMARY.md  README.md  SHADOW_RADIUS_TOKENS_SUMMARY.md  agent.md  docker-compose.yml  opencode.json  package-lock.json  test-keypair.json  verify-persistence.sh
.github/: copilot-coding-agent-instructions.md  copilot-instructions.md  dependabot.yml
.opencode/: README.md
adapters/solana_legacy/program/: .anchorignore  Cargo.toml
adapters/solana_legacy/program/programs/fan-governance/: Cargo.toml
adapters/solana_legacy/program/programs/fan-governance/src/: errors.rs  lib.rs  state.rs
adapters/solana_legacy/program/programs/fan-governance/src/instructions/: create_proposal.rs  finalize_proposal.rs  update_proposal_status.rs
adapters/solana_legacy/program/programs/fan-governance/tests/: flow_tests.rs  pda_tests.rs
backend/: FanEngagement.sln
deploy/: Dockerfile.api  Dockerfile.frontend  healthcheck.sh  nginx-frontend.conf
docs/: README.md  accessibility-testing.md  admin-panel-fix-flow.md  architecture.md  audit-export-rate-limiting.md  authorization.md  copilot-agent.md  demo-seed-data.md  development.md  frontend-header-navigation.md  future-improvements.md  mobile-navigation.md  (+2 more)
(+994 files in other folders)
