[package]
name = "fan-governance"
version = "0.1.0"
edition = "2021"
authors = ["FanEngagement Team"]
license = "UNLICENSED"
publish = false

[lib]
name = "fan_governance"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
tokio = { version = "1", features = ["macros"] }
solana-client = "2.3.13"

